--- a/course_project.Rmd
+++ b/course_project.Rmd
@@ -15,7 +15,7 @@ library(corrplot)
 
 ## Summary  
 
-The goal of this project is to predict whether weight-lift exercises were performed as recommended. It uses the experimental design and data from this project on [Human Activity Recognition] (http://groupware.les.inf.puc-rio.br/har).
+The goal of this project is predict whether weight-lift exercises were performed as recommended. It uses the experimental design and data from this project on [Human Activity Recognition] (http://groupware.les.inf.puc-rio.br/har).
 The dataset contains 160 features and 19622 cases. After some Exploratory Data Analysis (EDA), we decide to go through modeling with 60 features, besides the target. We performed Principal Component Analysis (PCA) in order to reduce the dimensionality, ending with 20 components that explained 90% of the variance.
 The data was splited in two sets, the training one with 70% of cases.
 We choose a Xg Boost model and used cross validation (CV) with K = 10 to tuning parameters.
@@ -47,10 +47,17 @@ testdata <- read.csv("pml-testing.csv", na.strings = c("","NA","NULL"))
 
 # Data assessment
 dataquality <- skim_without_charts(traindata)
-dataquality
+head(dataquality,10)
 
 ```
-Mostly features are empty or near that so we kept the ones carrying some info.
-We will use non parametric methods, so the assumption of normality of the features doesn't matter. But the inspection of qqplots shows that mostly are gaussian with heavy tails
+It seems that are two classes of features, regarding their origins. The majority related to the measures of the exercises and the others being metadata from the experiments (e.g. names e timestamp). We found a perfect correlation between *raw_timestamp_part_1* and *cvtd_timestamp*, since they express the same thing.
+
+```{r}
+plot(dmy_hm(cvtd_timestamp) ~ as.numeric(raw_timestamp_part_1), data = traindata)
+```
+
+We foru
+
+There are `r nrow(subset(dataquality, complete_rate < 0.05)) `  features with complete rate equals to 0.02. The fact
 
 
